# XRK-AGT

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc  .puppeteerrc.cjs  ADAPTER_GUIDE.md  AGENTS.md  AI_项目结构_20251115_084659.txt  AI_项目结构_20251115_092315.txt  BOOTSTRAP.md  BUGFIX_SUMMARY.md  CHANGES.md  CHANGES_DETAIL.md  Dockerfile  EXECUTIVE_SUMMARY.md  FIX_README.md  HEARTBEAT.md  IDENTITY.md  INDEX.md  LICENSE  PROJECT_OVERVIEW.md  QUICK_FIX_GUIDE.md  README.md  REFACTORING_SUMMARY.md  REPAIR_COMPLETE.txt  SOUL.md  TECHNICAL_SUMMARY.md  TOOLS.md  VERIFICATION_CHECKLIST.md  app.js  debug.js  docker-compose.subservers.yml  docker-compose.yml  docker-entrypoint.sh  docker.sh  (+13 more)
subserver/pyserver/: -  .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  docker-entrypoint.sh  main.py  pyproject.toml  requirements-2026.txt  requirements.txt
subserver/pyserver/.docker/: .gitignore  test-req.txt
subserver/pyserver/apis/: __init__.py  example.py
subserver/pyserver/apis/_template/: README.md  service.py
subserver/pyserver/apis/doc-pipeline/: README.md  config_schema.yaml  default_config.yaml  requirements.txt  service.py
subserver/pyserver/apis/langchain/: __init__.py  agent.py  langchain_service.py
subserver/pyserver/apis/media-tools/: README.md  (+4 more)
subserver/pyserver/config/: default_config.yaml
subserver/pyserver/core/: base_api.py  cli_ui.py  command_registry.py  config.py  loader.py  logger.py  main_server_client.py  plugin_config_api.py  plugin_kit.py  stdin_loop.py
(+949 files in other folders)
