[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xrk-agt-pyserver"
version = "1.0.5"
description = "XRK-AGT Python 子服务端"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pyyaml>=6.0.1",
]

[project.scripts]
xrk = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apis*", "core*"]

[tool.uv]
package = true
